Changelog for Shake

    Journal error conditions, to ensure they don't repeat
    Better messages on invalid database versions
    Complete rewrite of the storage layer and journal design
    IMPORTANT: Incompatible on disk format change
0.2.11
    IMPORTANT: #546, don't save the database to where it was created
0.2.10
    Add systemCwd for running with a particular current directory
    Ensure the database is saved to where it was created
    #545, make sure if shake is killed, it kills its children
0.2.9
    Require unordered-containers 2.1 or higher, fixes bugs
    Allow transformers-0.3.*
    Add a random script generator and tester
    Improve the documentation for withResource
    Fix the unordered-containers constraint, was too loose
    Don't write report generation messages in Quiet mode
    Add ?>> operator, a generalisation of *>>
0.2.8
    Rename shakeDump to shakeReport
    Add profile report generator
0.2.7
    #530, require unordered-containers >= 0.1.4.3
0.2.6
    Improve the documentation code fragments (more links)
    Add support for managing finite resources
0.2.5
    Require hashable-1.1.2.3, which has a TypeRep instance
    Add Data/Typeable instances for ShakeOptions
    Add Data instance for Verbosity
0.2.4
    Include the C example source files
    Significant documentation improvements
0.2.3
    Create the shakeFiles directory if missing
0.2.2
    Allow deepseq-1.3.*
    Add a basic lint checking mode
    Remove the Dirty state entirely (was incorrect)
0.2.1
    Put diagnostics in more places
    Add a C example
0.2
    Add shakeStaunch
    Rename shakeParallel to shakeThreads
    Delete the lint support (never actually worked)
    Completely rewrite the central build algorithm
    Add verbosity Diagnostic
    Improve FilePath.normalise
    Add writeFileChanged
    Add systemOutput
    Add an Oracle module
    Add an explicit Verbosity type
    Change to lower precedence for *> etc
0.1.5
    Allow deepseq-1.2
0.1.4